<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_marginTop="11dp"
        android:id="@+id/scrollview">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:text="@string/vInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:textSize="30sp"
                android:textColor="@color/colorPrimary"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:textAlignment="center" />

            <TextView
                android:text="@string/texto1Vertebrados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:layout_marginTop="20dp"
                android:textSize="24sp" />

            <TextView
                android:text="@string/texto2Vertebrados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView8"
                android:layout_marginTop="20dp"
                android:textSize="24sp" />

            <TextView
                android:text="@string/texto3Vertebrados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView9"
                android:layout_marginTop="20dp"
                android:textSize="24sp" />

            <TextView
                android:text="@string/texto4Vertebrados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/textView10"
                android:layout_marginTop="20dp"
                android:textSize="24sp" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>